--- a/src/components/Content/Header/index.css
+++ b/src/components/Content/Header/index.css
@@ -60,6 +60,7 @@
                 width: 104px;
                 border-radius: 2px;
                 font-size: 13px;
+                cursor: pointer;
             }
         }
 
